--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,59 @@
 // Mixins Here
+
+.column-center() {
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
+}
+
+.nav-styling(@t, @b, @l, @r) {
+    width: 100%;
+    margin: @t @b @l @r;
+    background: @wild-sand;
+    .column-center();
+    border-bottom: 1px solid @sea-shell;
+
+}
+
+.button(@btn-width, @btn-font-color, @btn-bg-color) {
+    border-radius: .5rem;
+    padding: .8rem 0 .8rem 0;
+    font-size: 1.4rem;
+    width: @btn-width;
+    text-align: center;
+    background: @btn-bg-color;
+    color: @btn-font-color;
+    cursor: pointer;
+    border: 1px solid @btn-bg-color;
+
+    &:hover {
+        background-color: @btn-font-color;
+        color: @btn-bg-color;
+      }
+}
+
+.fade-in-mixin() {
+	&>section {
+	animation-name: fade-in;
+	animation-duration: 1.5s;
+    }
+
+    &>div {
+        animation-name: fade-in;
+        animation-duration: 1.5s;
+        }
+    
+    @keyframes fade-in {
+        0% { opacity: 0; }
+        100% { opacity: 1; }
+      }
+}
+
+.clearfix() {
+    &:after {
+       content: "";
+       display: table;
+       clear: both;
+   }
+ }
