changed @mobile variable to @phone

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -8,7 +8,7 @@
     padding: 0 4rem 0 4rem;
     .fade-in-mixin();
 
-    @media @mobile {
+    @media @phone {
       padding-left: 0;
       padding-right: 0;
     }
@@ -18,7 +18,7 @@
       width: 100%;
       height: auto;
 
-      @media @mobile {
+      @media @phone {
         width: 100%;
         height: 100%;
         padding: 9.5rem 0 0 0!important;
@@ -29,7 +29,7 @@
 
       color: @main-font-color;
 
-      @media @mobile {
+      @media @phone {
         padding-left: .2rem;
         padding-right: .2rem;
       }
@@ -60,7 +60,7 @@
 
     .space-image1 {
 
-      @media @mobile {
+      @media @phone {
         padding-left: .5rem;
         padding-right: .5rem;
         width: 100%;
@@ -71,7 +71,7 @@
 
     .space-image2 {
 
-      @media @mobile {
+      @media @phone {
         display: none;
       }
       
@@ -79,7 +79,7 @@
 
     .space-image3 {
 
-      @media @mobile {
+      @media @phone {
         display: none;
       }
       
@@ -108,7 +108,7 @@
     justify-content: center;
     color: @main-font-color;
 
-    @media @mobile {
+    @media @phone {
       margin-top: 2rem;
       flex-direction: column-reverse;
       width: 100%;
@@ -120,7 +120,7 @@
     .walk-text {
       width: 50%;
 
-      @media @mobile {
+      @media @phone {
         width: 100%;
         padding-left: 1.5rem;
         padding-right: 1.5rem;
@@ -137,7 +137,7 @@
 
       .btn {
         .button(25%, white, @btn-bg-color);
-        @media @mobile {
+        @media @phone {
           width: 100%;
           padding-top: 2rem;
           padding-bottom: 2rem;
@@ -154,7 +154,7 @@
         height: auto;
         border-radius: 10px;
       }
-        @media @mobile {
+        @media @phone {
           width: 100%;
           height: 100%;
           padding-right: 3rem;
