--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,7 +2,7 @@
 .navigation-container {
     .nav-styling(1.5rem, 0, 0, 0,);
 
-    @media @mobile {
+    @media @phone {
         position: fixed;
         background: @nav-bg;
         margin: 0;
@@ -13,7 +13,7 @@
         font-size: 3.2rem;
         padding: 1.5rem 0 .75rem 0;
 
-        @media @mobile {
+        @media @phone {
             font-size: 3.5rem;
         }
         
@@ -26,7 +26,7 @@
         justify-content: space-between;
         width: 40%;
 
-        @media @mobile {
+        @media @phone {
             align-items: center;
             width: 100%;
             justify-content: space-between;
