added transform animation to the navigation file navigation.less

--- a/css/index.css
+++ b/css/index.css
@@ -207,6 +207,9 @@ p {
   color: #454A59;
   font-size: 1.6rem;
 }
+.navigation-container nav a:hover {
+  transform: scale(1.2);
+}
 footer {
   color: #22283B;
   background: #f4f4f4;
