--- a/less/navigation.less
+++ b/less/navigation.less
@@ -39,6 +39,9 @@
             color: @river-bend;
             font-size: 1.6rem;
         } // a tags within nav
+        a:hover {
+            transform: scale(1.2);
+        } // a:hover
     } // nav
 
 } // navigation container
